# simple_moveit2_universal_robots_movement

./: CMakeLists.txt
launch/: counter_return_launch.py  counter_withdraw_launch.py  shelf_bottom_return_launch.py  shelf_bottom_withdraw_launch.py  shelf_top_return_launch.py  shelf_top_withdraw_launch.py
src/: x0y1_down.cpp  x0y1_up.cpp  x1y0_down.cpp  x1y0_up.cpp  x2y0_down.cpp  x2y0_up.cpp
